--- a/README
+++ b/README
@@ -32,3 +32,6 @@ Instructions on how to get started compiling FreeRDP can be found on the wiki:
 https://github.com/FreeRDP/FreeRDP/wiki/Compilation
 
 
+test
+
+
